@@ -1,3 +1,8 @@
+2009-02-17  Brad Taylor  <brad@getcoded.net>
+
+	* plugins/interface_view.py: Don't allow the set_range to change the
+	value of our accessible (bug #572201).
+
 2009-02-17  Eitan Isaacson  <eitan@ascender.com>
 
 	* NEWS:
